Sync LeetCode submission - Merge Intervals (java)